# 1-week-Ray-Tracing

./: .gitignore  CMakeLists.txt  main.cpp
headers/: world.hpp
headers/components/: component.hpp
headers/components/colliders/: collider.hpp  sphereCollider.hpp
headers/math/: base.hpp  math.hpp  solver.hpp
headers/math/matrix/: mat4.hpp
headers/math/vector/: vec2.hpp  vec3.hpp  vec4.hpp
headers/models/: model.hpp  sphere.hpp
headers/objects/: sphere.hpp
headers/utilities/: camera.hpp  random.hpp  ray.hpp
sources/: world.cpp
sources/components/: component.cpp
sources/components/colliders/: collider.cpp  sphereCollider.cpp
sources/math/: solver.cpp
sources/models/: model.cpp  sphere.cpp
sources/objects/: sphere.cpp
sources/utilities/: camera.cpp  random.cpp  ray.cpp
